úprava textu a css

--- a/css/css.css
+++ b/css/css.css
@@ -4,7 +4,7 @@ body {
   color: #ffffff;
 }
 
-/* Úprava veľkosti písma a zarovnania obrázkov v sekcii Main */
+/* Úprava veľkosti písma a zarovnania obrázkov  */
 main img {
   width: 100%;
   max-height: 700px;
