--- a/css/css.css
+++ b/css/css.css
@@ -54,6 +54,7 @@ p:first-of-type {
   box-shadow: 0 0 20px rgba(0,0,0,0.15);
   transition: 0.3s;
   background-color: #ffffff; 
+  overflow: hidden;
 }
 
 .special-table:hover {
@@ -244,4 +245,68 @@ footer p {
   font-size: 14px;
   margin: 4px 2px;
   cursor: pointer;
+}
+
+.myTable td{
+  color:white;
+}
+
+.create {
+  display: inline-block;
+  font-size: 1em;
+  padding: 5px 15px;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  background: lightblue;
+  color: black;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  transition: all 0.2s ease-in-out;
+  margin-bottom: 10px;
+  margin-left: 10px;
+}
+
+.create:hover {
+  transform: scale(1.05);
+  box-shadow: 0 15px 25px -5px rgba(0, 0, 0, 0.2), 0 6px 9px -3px rgba(0, 0, 0, 0.1);
+}
+
+.btn-Edit {
+  display: inline-block;
+  font-size: 1em;
+  padding: 5px 15px;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  background: lightblue;
+  color: black;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  transition: all 0.2s ease-in-out;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.btn-Edit:hover {
+  transform: scale(1.05);
+  box-shadow: 0 15px 25px -5px rgba(0, 0, 0, 0.2), 0 6px 9px -3px rgba(0, 0, 0, 0.1);
+}
+
+.btn-Delete {
+  display: inline-block;
+  font-size: 1em;
+  padding: 5px 15px;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  background: red;
+  color: white;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  transition: all 0.2s ease-in-out;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+.btn-Delete:hover {
+  transform: scale(1.05);
+  box-shadow: 0 15px 25px -5px rgba(0, 0, 0, 0.2), 0 6px 9px -3px rgba(0, 0, 0, 0.1);
+  color:white
 }
