--- a/css/css.css
+++ b/css/css.css
@@ -310,3 +310,46 @@ footer p {
   box-shadow: 0 15px 25px -5px rgba(0, 0, 0, 0.2), 0 6px 9px -3px rgba(0, 0, 0, 0.1);
   color:white
 }
+
+label {
+  display: block;
+  font-size: 1.3em;
+  margin-bottom: 0.5em;
+  color: white;
+  margin-left: 10px;
+}
+
+input[type="text"], textarea {
+  display: block;
+  width: 99%;
+  padding: 10px;
+  font-size: 1em;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin-bottom: 1em;
+  margin-left: 5px;
+}
+
+textarea {
+  min-height: 150px;
+}
+
+input[type="submit"] {
+  display: inline-block;
+  font-size: 1em;
+  padding: 5px 10px;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  background: lightblue;
+  color: white;
+  border: none;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  margin-left: 5px;
+}
+
+input[type="submit"]:hover {
+  transform: scale(1.05);
+  box-shadow: 0 15px 25px -5px rgba(0, 0, 0, 0.2), 0 6px 9px -3px rgba(0, 0, 0, 0.1);
+}
