--- a/css/css.css
+++ b/css/css.css
@@ -87,7 +87,7 @@ p:first-of-type {
 .special-table tr:nth-child(2),
 .special-table tr:nth-child(3),
 .special-table tr:nth-child(4) {
-  background-color: #1f1f7f; 
+  background-color:lightblue; 
 }
 
 .special-table tr:nth-child(5) {
@@ -352,4 +352,31 @@ input[type="submit"] {
 input[type="submit"]:hover {
   transform: scale(1.05);
   box-shadow: 0 15px 25px -5px rgba(0, 0, 0, 0.2), 0 6px 9px -3px rgba(0, 0, 0, 0.1);
+}
+
+
+/* Štýly pre informačnú sekciu */
+.info-section {
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  max-width: 100%; /* Matches the width of .special-table */
+  margin: auto; /* Centers the section */
+}
+
+.info-title, .info-subtitle {
+  color: #333;
+  font-family: Arial, sans-serif;
+}
+
+.info-list {
+  list-style-type: disc;
+  margin-left: 10px;
+  color: #666;
+  font-family: Arial, sans-serif;
+}
+
+.info-list li {
+  margin-bottom: 10px;
 }
