--- a/css/css.css
+++ b/css/css.css
@@ -256,27 +256,38 @@ footer p {
   cursor: pointer;
 }
 
+
+/* Štýly pre tabuľku articles */
 .myTable td{
   color:white;
 }
 
 .create {
   display: inline-block;
+  width: 150px;
+  height: 60px;
   font-size: 1em;
   padding: 5px 15px;
-  border-radius: 5px;
+  border: 3px solid #315cfd;
+  border-radius: 45px;
   text-align: center;
   text-decoration: none;
-  background: lightblue;
+  background: white;
   color: black;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-  transition: all 0.2s ease-in-out;
+  transition: all 0.3s;
+  cursor: pointer;
+  font-weight: 50;
+  font-family: 'Montserrat', sans-serif;
   margin-bottom: 10px;
   margin-left: 10px;
 }
 
 .create:hover {
-  transform: scale(1.05);
+  transform: scale(1.05); /* Increase the size of the button slightly on hover */
+  background: #315cfd;
+  color: white;
+  font-size: 1em; /* Keep the font size the same on hover */
   box-shadow: 0 15px 25px -5px rgba(0, 0, 0, 0.2), 0 6px 9px -3px rgba(0, 0, 0, 0.1);
 }
 
